# fast_api_master

./: README.md  pyproject.toml
api_master/: main.py
tests/: test_main.py
