[tool.poetry]
name = "api-master"
version = "0.1.0"
description = ""
authors = ["Matheus Mendes <fligthmedia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.4.10"
httpx = "^0.27.0"
ignr = "^2.2"
gh = "^0.0.4"

[tool.ruff]
line-length =79
extend-exclude = ['migrations']

[tool.rudd.lint]
preview = true
select = ['I', 'F', 'W', 'PL', 'PT']

[tool.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api-master-py3.12 -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
